# django-layout

./: Dockerfile  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: django.yml
client/: description.txt
project_name/: asgi.py  urls.py  wsgi.py
project_name/project_name/: config.py  routers.py
project_name/project_name/settings/: base.py
project_name/project_name/static/error/: styles.css
project_name/project_name/templates/: 404.html  502.html
project_name/settings/: base.py  dev.py  prod.py
project_name/static/error/: script.js
project_name/templates/: 500.html
project_name/templates/error/: base.html
